--- a/css/style.scss
+++ b/css/style.scss
@@ -675,3 +675,38 @@ pre {
     .vi    { color: #008080 } // Name.Variable.Instance
     .il    { color: #099 } // Literal.Number.Integer.Long
 }
+
+.fav-list{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 2px;
+}
+/* .fav-list::after{
+  content: '';
+  flex-grow: 999999999;
+  order: 999999999;
+} */
+.fav-list > div{
+  margin: 2px;
+  background-color: violet;
+  position: relative;
+}
+.fav-list > div > i {
+  display: block;
+  background-color: lightblue;
+  /* display: none; */
+}
+.fav-list > div > img {
+  position: absolute;
+  vertical-align: bottom;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.fav-list > .placeholder{
+  flex-grow: 100;
+  flex-basis: 240px;
+  height: 0;
+  margin: 0;
+}
