--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,12 +21,17 @@
             {% include icon-github.html username=site.github_username %}
           </li>
           {% endif %}
-
-          {% if site.twitter_username %}
+          {% if site.linkedin_username %}
           <li>
-            {% include icon-twitter.html username=site.twitter_username %}
+            {% include icon-linkedin.html username=site.linkedin_username %}
           </li>
           {% endif %}
+          {% if site.facebook_username %}
+          <li>
+            {% include icon-facebook.html username=site.facebook_username %}
+          </li>
+          {% endif %}
+
         </ul>
       </div>
 
