--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,13 +6,13 @@
 <center>  {{site.description}} </center>
 </div>
 <div class="wrapper">
-  <div class="trigger site-navigation">
-    <a class="page-link" href="{{site.url}}{{site.baseurl}}/">HOME</a><span class="exclamationMark">/</span>
+  <div class="trigger site-navigation" align="center">
+    <a class="page-link" href="{{site.url}}{{site.baseurl}}/">HOME</a>
 
     {% for sitePage in site.pages %}
     {% if sitePage.title %}
 
-    <a class="page-link" href="{{sitePage.url | prepend: site.baseurl }}">{{sitePage.title}}</a><span class="exclamationMark">/</span>
+    <span class="exclamationMark">/</span><a class="page-link" href="{{sitePage.url | prepend: site.baseurl }}">{{sitePage.title}}</a>
     {% endif %}
     {% endfor %}
   </div>
