--- a/css/style.scss
+++ b/css/style.scss
@@ -23,7 +23,7 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    1000px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
@@ -61,6 +61,7 @@ p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
     margin: 0;
     padding: 0;
+    list-style: outside disc;
 }
 
 
@@ -131,6 +132,11 @@ li {
     }
 }
 
+ul li {
+    position: relative;
+    left: 2em;
+    padding-right: 2em;
+}​
 
 
 /**
